@@ -19,6 +19,7 @@
 */
 
 #include <stdio.h>
+#include <string.h>
 #ifdef ASSERT_DEBUG
    #include <assert.h>
 #endif
