@@ -10,6 +10,9 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
   - Updated vusage client API not to try to connect to the daemon if
     vusagec.conf does not exist
 
+  aledr <matrixworkstation@gmail.com>
+  - Patch to secure against possible overflows when reading ezmlm configurations
+
 5.4.31 - Released 12-10-2009
    Matt Brookings
    - Released to fix leftover issue that should have been addressed in 5.4.30
